# photostory

./: .gitignore  CMakeLists.txt  README.md  main.py
photostory/: CMakeLists.txt  photolib.py
photostory/app/: CMakeLists.txt  photostory.cpp
photostory/include/: Image.h
photostory/src/: Image.cpp
